src/objects/Employer_Splits__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BU__c</fullName>
        <description>The Bargaining Unit this split setting applies to</description>
        <label>BU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Employer_Name__c</fullName>
        <label>Base Employer Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Employer_Name__c</fullName>
        <label>Split Employer Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Job Title/Class the split trigger applies to.</description>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worksite__c</fullName>
        <label>Worksite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Employer Splits</label>
</CustomObject>